# o-range

./: .clang-format  CMakeLists.txt
docker/: Dockerfile  README
include/Logger/: Backtrace.hpp  ExceptionHandler.hpp  Formatters.hpp  Logger.hpp  SPDLogger.hpp
include/R-Range/: ArenaLocator.hpp  Call.hpp  Device.hpp  Leg.hpp  LogicLayer.hpp  Number.hpp  Object.hpp  ObjectArena.hpp  ObjectLocator.hpp  Session.hpp
include/S2B/: Command.hpp  CommandBus.hpp  Media.hpp  SIPCommand.hpp  SignalCommand.hpp
include/SipStack/: CustomLogger.hpp  Formatters.hpp  ORangeSessionHandler.hpp  SipStack.hpp
include/util/: Settings.hpp  Singleton.hpp  type_traits.hpp
src/: CMakeLists.txt  main.cpp
src/Logger/: Backtrace.cpp  CMakeLists.txt  ExceptionHandler.cpp  Logger.cpp  Logger.hpp  SPDLogger.cpp
src/R-Range/: ArenaLocator.cpp  CMakeLists.txt  Call.cpp  Device.cpp  Device.hpp  Leg.cpp  Leg.hpp  LogicLayer.cpp  Number.cpp  Object.cpp  Object.hpp  ObjectArena.cpp  ObjectArena.hpp  Session.cpp
src/S2B/: CMakeLists.txt  Command.cpp  Command.hpp  CommandBus.cpp  CommandBus.hpp  SIPCommand.cpp  SIPCommand.hpp  SignalCommand.cpp
src/SipStack/: CMakeLists.txt  ORangeSessionHandler.cpp  SipStack.cpp
src/SipStack/include/: CustomLogger.hpp  ORangeSessionHandler.hpp  SipStack.hpp
src/SipStack/src/: SipStack.cpp
src/util/: Singleton.hpp
tests/Logger/: CMakeLists.txt  main.cpp
tests/R-Range/: CMakeLists.txt  main.cpp
tests/S2B/: CMakeLists.txt  main.cpp
tests/SipStack/: CMakeLists.txt  main.cpp
tests/SipStack/sipp_scenarios/: invite.xml  uas_busy.xml
tests/util/: CMakeLists.txt  main.cpp
